# ControlMCP

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: ARCHITECTURE.md  FUNCTIONAL_DESIGN.md  MODULE_DESIGN.md  REQUIREMENTS.md  TUTORIAL.md
docs/zh-CN/: ARCHITECTURE.md  FUNCTIONAL_DESIGN.md  MODULE_DESIGN.md  REQUIREMENTS.md  TUTORIAL.md
skills/computer-control/: README.md  SKILL.md
skills/computer-control/docs/: coordinate-system.md  idea-run-workflow.md  window-management.md
src/control_mcp/: __init__.py  server.py
src/control_mcp/app/: __init__.py  dispatcher.py  tool_registry.py
src/control_mcp/control_plane/: __init__.py  executor.py  guards.py  memory.py  planner.py  recovery.py  strategies.py  verifier.py
src/control_mcp/domain/: __init__.py  models.py
src/control_mcp/schemas/: __init__.py  responses.py
src/control_mcp/tools/: __init__.py  actions.py  combined.py  grid.py  keyboard.py  mouse.py  screen.py  window.py
src/control_mcp/utils/: __init__.py  _linux_window.py  _mac_window.py  _win_window.py  capture.py
tests/: test_actions.py  test_capture_scroll.py  test_combined.py  test_control_plane.py  test_grid.py  test_keyboard.py  test_memory.py  test_mouse.py  test_schemas.py  test_screen.py  test_server_scroll.py  test_window.py
