[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "control-mcp"
version = "0.1.0"
description = "MCP server for LLM-controlled computer operations — screen capture, window management, mouse & keyboard automation."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "ControlMCP Contributors" },
]
keywords = ["mcp", "llm", "automation", "screen-capture", "mouse", "keyboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
dependencies = [
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    "python-xlib>=0.33; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
control-mcp = "control_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/control_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
